Remove Guava dependency from WebGoat